@@ -1,3 +1,11 @@
+2001-08-20  Dave Peticolas  <dave@krondo.com>
+
+	* src/engine/gnc-book-p.h: add const
+
+	* src/engine/gnc-book.c: strdup error message for backend
+
+	* src/backend/file/gnc-backend-file.c: fix bugs
+
 2001-08-19  Christian Stimming  <stimming@tuhh.de>
 
 	* po/gnc-glossary.txt, po/glossary/gnc-glossary.txt,
